components/policies/rings/ring-2/base/base-snapshot/kubearchive/bootstrap-namespace/.kyverno-test/kyverno-test.yaml
apiVersion: cli.kyverno.io/v1alpha1
kind: Test
metadata:
  name: bootstrap-existing-namespaces
policies:
- ../bootstrap-namespace-cp.yaml
resources:
- ../resources/labeled-namespace-konflux.yaml
results:
- policy: init-ns-kubearchiveconfig
  generatedResource: ../resources/expected-kubearchiveconfig-konflux.yaml
  kind: Namespace
  resources:
  - labeled-namespace-konflux
  result: pass
  rule: init-ns-kubearchiveconfig
